--- a/vistas/privado/panel_principal.html
+++ b/vistas/privado/panel_principal.html
@@ -70,7 +70,7 @@
     <!-- Pie de página -->
     <footer id="footer"></footer>
     <!-- Importación de la librería Chart.js para generar gráficos -->
-    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script type="text/javascript" src="../../recursos/chart.umd.min.js"></script>
     <!-- *Llamada a las hojas de estilos del framework e iconos -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <!-- *Llamada al controlador general de la aplicación -->
