Cambio de ortografia

--- a/vistas/publico/tus_pedidos.html
+++ b/vistas/publico/tus_pedidos.html
@@ -55,7 +55,7 @@ TODO importante // realtando algo
                         <!--TExTo CON CANTIDAD DE PEDIDOS REALIZADOS-->
                         <div class="col-lg-6">
                             <h5 class="titillium-web-extralight" id="pedidosHechos">
-                                X Pedidos realizados hasta el momento
+                                Pedidos realizados hasta el momento
                             </h5>
                         </div>
                         <!--SELECT-->
