--- a/vistas/privado/panel_principal.html
+++ b/vistas/privado/panel_principal.html
@@ -48,13 +48,13 @@
                 <canvas id="chart1"></canvas>
             </div>
             <div class="graficContainer shadow">
+                <canvas id="chart4"></canvas>
+            </div>
+            <div class="graficContainer shadow">
                 <canvas id="chart2"></canvas>
             </div>
             <div class="graficContainer shadow">
                 <canvas id="chart3"></canvas>
-            </div>
-            <div class="shadow col-lg-6 col-md-6">
-                <canvas id="chart4"></canvas>
             </div>
             <div class="shadow col-lg-5 p-3 col-md-5">
                 <canvas id="chart5"></canvas>
