Grafico de Top Zapatos

--- a/vistas/privado/panel_principal.html
+++ b/vistas/privado/panel_principal.html
@@ -47,7 +47,7 @@
             <div class="graficContainer shadow">
                 <canvas id="chart1"></canvas>
             </div>
-            <div class="graficContainer shadow">
+            <div class="graficContainerCliente shadow">
                 <canvas id="chart4"></canvas>
             </div>
             <div class="graficContainer shadow">
