Inicio de reportes

--- a/vistas/privado/trabajadores.html
+++ b/vistas/privado/trabajadores.html
@@ -156,6 +156,9 @@
                             <button type="button" class="btn btn3 btn-primary mx-4 my-2 shadow text18 titillium-web-regular" id="btnBloq" onclick="botonBloquear()"
                             >Bloquear
                             </button>
+                            <button type="button" class="btn btn3 btn-primary mx-4 my-2 shadow text18 titillium-web-regular" id="btnBloq" onclick="generarReporte()"
+                            >Reporte
+                            </button>
                             <p id="textoInfo" class="text-white titillium-web-regular text-center d-flex justify-content-center align-items-center m-0"></p>
                         </div>
                     </div>
